--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -2,6 +2,7 @@ main .container .section{padding:5rem 0;}
 
 /* mensaje de carito vacío */
 .wc-empty-cart-message{text-align:center;padding:1.5rem 0 1.6rem;}
+.wc-empty-cart-message .cart-empty:before{position:relative;content:'\e117';font-family:'nm-font';width:50px;height:50px;}
 .wc-empty-cart-message .cart-empty{display:inline-flex;position:relative;vertical-align:middle;font-size:20px;color:var(--wp--preset--color--title);}
 .return-to-shop{text-align:center;}
 .return-to-shop .button.wc-backward{padding:.8rem 1.4rem;color:#fff;background-color:var(--wp--preset--color--title);font-size:16px;}
