template del carrito

--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -1,11 +1,11 @@
 main .container .section{padding:5rem 0;}
 
 /* mensaje de carito vacío */
-.wc-empty-cart-message{text-align:center;padding:1.5rem 0 1.6rem;}
-.wc-empty-cart-message .cart-empty:before{position:relative;content:'\e117';font-family:'nm-font';width:50px;height:50px;padding:8px;}
+.wc-empty-cart-message{text-align:center;padding:15px 0 16px;}
+.wc-empty-cart-message .cart-empty:before{position:relative;content:'\e117';font-family:'nm-font';width:50px;height:50px;padding:8px;background-color:#ebebeb;border-radius:50%;margin-inline:auto;margin-bottom:16px;}
 .wc-empty-cart-message .cart-empty{display:grid;justify-content:center;position:relative;vertical-align:middle;font-size:20px;color:var(--wp--preset--color--title);}
 .return-to-shop{text-align:center;}
-.return-to-shop .button.wc-backward{padding:.8rem 1.4rem;color:#fff;background-color:var(--wp--preset--color--title);font-size:16px;}
+.return-to-shop .button.wc-backward{padding:8px 14px;color:#fff;background-color:var(--wp--preset--color--title);font-size:16px;}
 
 /* tabla de productos */
 .woocommerce-cart-form .woocommerce-cart-form__contents{width:100%;}
