--- a/style.css
+++ b/style.css
@@ -190,5 +190,5 @@ img{display:block; height:auto;}
 .widget_shopping_cart_content .woocommerce-mini-cart__buttons .button.wc-forward{display:flex; align-items:center; justify-content:center; width:100%; height:44px; color:#fff; background-color:transparent; border:1px solid #777;}
 .widget_shopping_cart_content .woocommerce-mini-cart__buttons .button.checkout.wc-forward{background-color:#111; border-color:#111; margin-top:12px;}
 /* mensaje de carrito vacio */
-.woocommerce-mini-cart__empty-message:before{position:relative;content:'\e117';font-family:'nm-font';width:50px;height:50px;padding:8px;background-color:#414141;color:#fff;border-radius:50%;margin-inline:auto;margin-bottom:16px;}
-.woocommerce-mini-cart__empty-message{display:grid;justify-content:center;position:relative;vertical-align:middle;font-size:20px;color:#fff;}
+.woocommerce-mini-cart__empty-message:before{position:relative;content:'\e117';font-family:'nm-font';width:50px;height:50px;padding:9px 14px;background-color:#414141;color:#fff;border-radius:50%;margin-inline:auto;margin-bottom:16px;}
+.woocommerce-mini-cart__empty-message{display:grid;justify-content:center;position:relative;vertical-align:middle;font-size:20px;color:#fff;align-content:baseline;margin-top:40px;}
