--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -20,6 +20,8 @@ main .container .section{padding:3rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td .coupon input[type=text]:focus{border-color:var(--wp--preset--color--border-input-focus);}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button{line-height:1.6; outline:none; padding:8px 10px;font-size:16px;border:1px solid #323232;background-color:#323232;color:#fff;font-size:16px;transition:all .3s ease;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button:hover{border:1px solid #888;background-color:#888;}
+.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button:disabled{border:1px solid #888;color:#888;background-color:#ebebeb;}
+.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button:disabled:hover{border:1px solid #888;color:#888;background-color:#ebebeb;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item{display:grid;grid-template-columns:5rem 1fr 6rem;grid-template-rows:auto 1fr;gap:.3rem 1rem;padding:1.2rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-remove{grid-column:3/4;grid-row:1/2;text-align:right;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-thumbnail{grid-column:1/2;grid-row:1/3;}
