--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -24,9 +24,11 @@ main .container .section{padding:3rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button:disabled:hover{border:1px solid #888;color:#888;background-color:#ebebeb;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item{display:grid;grid-template-columns:5rem 1fr 6rem;grid-template-rows:auto 1fr;gap:.3rem 1rem;padding:1.2rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-remove{grid-column:3/4;grid-row:1/2;text-align:right;}
+.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-remove a{font-size:20px; color:var(--wp--preset--color--title);}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-thumbnail{grid-column:1/2;grid-row:1/3;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-thumbnail a img{width:5rem;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-name{grid-column:2/3;grid-row:1/2;}
+.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-name a{color:var(--wp--preset--color--title);}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-price{display:none;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-quantity{grid-column:2/3;grid-row:2/3;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-quantity .quantity{display:flex;}
