--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -15,7 +15,7 @@ main .container .section{padding:3rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr{padding:1.2rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child{display:block;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td{display:grid;gap:12px;}
-.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td .coupon{display:grid;grid-template-columns:1fr 9rem;gap:3px;}
+.woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td .coupon{display:grid;grid-template-columns:var(--grid-template-columns--coupon);gap:3px;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td .coupon input[type=text]{line-height:1.6; outline:none; padding:8px 10px; border:1px solid var(--wp--preset--color--border-input);font-size:16px;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child td .coupon input[type=text]:focus{border-color:var(--wp--preset--color--border-input-focus);}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr:last-child :is(td .coupon, td) button{line-height:1.6; outline:none; padding:8px 10px;font-size:16px;border:1px solid #323232;background-color:#323232;color:#fff;font-size:16px;transition:all .3s ease;}
