--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -42,4 +42,4 @@ main .container .section{padding:3rem 0;}
 
 /* totales del carrito */
 .cart-collaterals .cart_totals table.shop_table tbody{border:1px solid var(--wp--preset--color--line);}
-
+.cart-collaterals .cart_totals table.shop_table tbody tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;}
