--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -41,8 +41,8 @@ main .container .section{padding:3rem 0;}
 .woocommerce-cart-form .woocommerce-cart-form__contents tbody tr.woocommerce-cart-form__cart-item td.product-subtotal{grid-column:3/4;grid-row:2/3;text-align:right;}
 
 /* totales del carrito */
-.cart-collaterals .cart_totals table.shop_table{width:100%;}
-.cart-collaterals .cart_totals table.shop_table tbody{border:1px solid var(--wp--preset--color--line);}
+.cart-collaterals .cart_totals table.shop_table{width:100%;margin:27px 0 21px;}
 .cart-collaterals .cart_totals table.shop_table tbody tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;border:1px solid #e1e1e1;}
 .cart-collaterals .cart_totals table.shop_table tbody tr.cart-subtotal{border-bottom:0px solid transparent;}
 .cart-collaterals .cart_totals table.shop_table tbody tr > *{padding:15px 22px;font-weight:400;}
+.cart-collaterals .cart_totals table.shop_table tbody tr > * strong{font-weight:400;}
