--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -46,3 +46,4 @@ main .container .section{padding:3rem 0;}
 .cart-collaterals .cart_totals table.shop_table tbody tr.cart-subtotal{border-bottom:0px solid transparent;}
 .cart-collaterals .cart_totals table.shop_table tbody tr > *{padding:15px 22px;font-weight:400;}
 .cart-collaterals .cart_totals table.shop_table tbody tr > * strong{font-weight:400;}
+.cart-collaterals .cart_totals .wc-proceed-to-checkout a{display:grid;place-content:center;line-height:1.6;padding:8px 10px;font-size:16px;border:1px solid #323232;background-color:#323232;color:#fff;font-size:16px;transition:all .3s ease;}
