--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -1,5 +1,6 @@
 main .container .section{padding:3rem 0;}
 main .container .section .woocommerce{display:grid;grid-template-columns:var(--grid-template-columns--carrito);gap:50px;}
+main .container .section .woocommerce .woocommerce-notices-wrapper{grid-column:1/-1;}
 
 /* mensaje de carito vacío */
 .wc-empty-cart-message{text-align:center;padding:15px 0 16px;}
