--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -1,3 +1,5 @@
+#body{display:grid; min-height:100vh; align-content:flex-start; grid-template-rows:auto 1fr auto; background-color:var(--wp--preset--color--line);}
+
 main .container .section{padding:3rem 0;}
 main .container .section .woocommerce{display:grid;grid-template-columns:var(--grid-template-columns--carrito);gap:0 50px;}
 main .container .section .woocommerce .woocommerce-notices-wrapper{grid-column:1/-1;}
