--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -48,7 +48,7 @@ main .container .section .woocommerce .woocommerce-notices-wrapper{grid-column:1
 .cart-collaterals .cart_totals table.shop_table{width:100%;margin:27px 0 21px;}
 .cart-collaterals .cart_totals table.shop_table tbody tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;border:1px solid #e1e1e1;}
 .cart-collaterals .cart_totals table.shop_table tbody tr.cart-subtotal{border-bottom:0px solid transparent;}
-.cart-collaterals .cart_totals table.shop_table tbody tr > *{padding:15px 22px;font-weight:400;}
-.cart-collaterals .cart_totals table.shop_table tbody tr > * strong{font-weight:400;}
+.cart-collaterals .cart_totals table.shop_table tbody tr > *{padding:15px 22px;font-weight:400;color:var(--wp--preset--color--title);}
+.cart-collaterals .cart_totals table.shop_table tbody tr > * strong{font-weight:400;color:var(--wp--preset--color--title);}
 .cart-collaterals .cart_totals .wc-proceed-to-checkout a{display:grid;place-content:center;line-height:1.6;padding:8px 10px;font-size:16px;border:1px solid #323232;background-color:#323232;color:#fff;font-size:16px;transition:all .3s ease;}
 .cart-collaterals .cart_totals .wc-proceed-to-checkout :is(a:hover,a:focus){border:1px solid #888;background-color:#888;}
