--- a/assets/css/woocommerce/cart.css
+++ b/assets/css/woocommerce/cart.css
@@ -5,7 +5,7 @@ main .container .section .woocommerce{display:grid;grid-template-columns:var(--g
 
 /*mensajes*/
 main .container .section .woocommerce .woocommerce-notices-wrapper{grid-column:1/-1;}
-main .container .section .woocommerce .woocommerce-notices-wrapper .woocommerce-message{text-align:center;color:#03a678;font-size:18px;}
+main .container .section .woocommerce .woocommerce-notices-wrapper .woocommerce-message{text-align:center;color:#03a678;font-size:18px;padding-bottom:32px;}
 
 /* mensaje de carito vacío */
 .wc-empty-cart-message{text-align:center;padding:15px 0 16px;}
