--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -1,9 +1,8 @@
 main .woocommerce-checkout{display:grid; gap:5rem; margin-bottom:6rem;}
-#customer_details .col-1{padding:3rem; border:1px solid var(--wp--preset--color--line); border-bottom:none;}
-#customer_details .col-1 h3{font-size:3rem; margin-bottom:3rem;}
+#customer_details .col-1 h3{font-size:24px; margin-bottom:3rem;}
 #customer_details .col-1 .woocommerce-billing-fields__field-wrapper{display:grid; gap:2rem;}
 #customer_details .col-2{padding:3rem; border:1px solid var(--wp--preset--color--line);}
-#customer_details .col-2 h3{font-size:3rem; margin-bottom:3rem;}
+#customer_details .col-2 h3{font-size:24px; margin-bottom:3rem;}
 #order_comments_field label{color:var(--attenuated-text);}
 abbr[title]{color:red; text-decoration:none;}
 #order_review_heading{font-size:3rem;}
