--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -11,7 +11,7 @@ abbr[title]{color:red; text-decoration:none;}
 .shop_table.woocommerce-checkout-review-order-table{width:100%;}
 .shop_table.woocommerce-checkout-review-order-table :is(th, td, tr){height:6rem; text-align:left; border-bottom:1px solid var(--wp--preset--color--line);}
 .shop_table.woocommerce-checkout-review-order-table :is(.product-total, td:last-child){text-align:right;}
-.shop_table.woocommerce-checkout-review-order-table tfoot tr:last-child :is(th, td){border-bottom:none; font-size:2.5rem;}
+.shop_table.woocommerce-checkout-review-order-table tfoot tr:last-child :is(th, td){border-bottom:none;}
 .shop_table.woocommerce-checkout-review-order-table tfoot tr:last-child :is(th, strong){font-weight:400;}
 .woocommerce-terms-and-conditions-wrapper{margin-bottom:2rem;}
 #place_order{
@@ -33,7 +33,7 @@ abbr[title]{color:red; text-decoration:none;}
 }
 
 @media(min-width:1024px){
-    main .woocommerce-checkout{grid-template-columns:1fr 1fr; grid-template-rows:auto 1fr;}
+    main .woocommerce-checkout{grid-template-columns:var(--grid-template-columns--carrito); grid-template-rows:auto 1fr;}
     #customer_details{grid-column:1/2; grid-row:1/3;}
     #order_review_heading{grid-column:2/3;}
     #order_review{grid-column:2/3; align-self:baseline;}
