--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -19,17 +19,14 @@ abbr[title]{color:red; text-decoration:none;}
     width: 100%;
     height: 6rem;
     place-content: center;
-    font-size: 2.5rem;
-    border: 1px solid var(--wp--preset--color--yellow);
-    background-color: var(--wp--preset--color--yellow);
-    color: var(--wp--preset--color--title);
-    font-weight: 600;
+    border: 1px solid #323232;
+    background-color: #323232;
+    color: #fff;
+    font-weight:400;
     transition:all .3s ease;
 }
 #place_order:hover{
-    border:1px solid var(--wp--preset--color--text);
-    background-color:var(--wp--preset--color--text);
-    color:#fff;
+    filter:brightness(1.5);
 }
 
 @media(min-width:1024px){
