--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -15,9 +15,10 @@ abbr[title]{color:red; text-decoration:none;}
 .shop_table.woocommerce-checkout-review-order-table tfoot tr:last-child :is(th, strong){font-weight:400;}
 .woocommerce-terms-and-conditions-wrapper{margin-bottom:2rem;}
 #place_order{
+    font-size:16px;;
     display: grid;
     width: 100%;
-    height: 6rem;
+    height:44px;
     place-content: center;
     border: 1px solid #323232;
     background-color: #323232;
