--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -12,6 +12,7 @@ abbr[title]{color:red; text-decoration:none;}
 .shop_table.woocommerce-checkout-review-order-table tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;border:1px solid #e1e1e1;border-bottom:0px solid transparent;}
 .shop_table.woocommerce-checkout-review-order-table tr > *{padding:15px 22px;font-weight:400;}
 .shop_table.woocommerce-checkout-review-order-table tr.order-total{border-bottom:1px solid #e1e1e1;}
+.shop_table.woocommerce-checkout-review-order-table tr.order-total td strong{font-weight:400;font-size:24px;}
 
 .woocommerce-terms-and-conditions-wrapper{margin-bottom:2rem;}
 #place_order{
