--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -8,11 +8,11 @@ p :is(input,textarea){width:100%;}
 #order_comments_field label{color:var(--wp--preset--color--title);}
 abbr[title]{color:red; text-decoration:none;}
 #order_review_heading{font-size:24px;}
-.shop_table.woocommerce-checkout-review-order-table{width:100%;margin:27px 0 21px;border-collapse:collapse;}
+.shop_table.woocommerce-checkout-review-order-table{width:100%;margin:27px 0 21px;border-collapse:collapse;font-size:15px;color:var(--wp--preset--color--title);}
 .shop_table.woocommerce-checkout-review-order-table tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;border:1px solid #e1e1e1;border-bottom:0px solid transparent;}
 .shop_table.woocommerce-checkout-review-order-table tr > *{padding:15px 22px;font-weight:400;}
 .shop_table.woocommerce-checkout-review-order-table tr.order-total{border-bottom:1px solid #e1e1e1;}
-.shop_table.woocommerce-checkout-review-order-table tr.order-total td strong{font-weight:400;font-size:24px;}
+.shop_table.woocommerce-checkout-review-order-table tr.order-total td strong{font-weight:400;font-size:20px;}
 
 .woocommerce-terms-and-conditions-wrapper{margin-bottom:2rem;}
 #place_order{
