--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -1,6 +1,7 @@
 main .woocommerce-checkout{display:grid; gap:0 5rem; margin-bottom:6rem;}
 p:has(label){display:grid;}
 p :is(input,textarea){width:100%;}
+#customer_details .col-1{color:var(--wp--preset--color--title);}
 #customer_details .col-1 h3{font-size:24px; margin-bottom:3rem;}
 #customer_details .col-1 .woocommerce-billing-fields__field-wrapper{display:grid; gap:2rem;}
 #customer_details .col-2{padding:3rem; border:1px solid var(--wp--preset--color--line);}
