template del checkout

--- a/assets/css/woocommerce/checkout.css
+++ b/assets/css/woocommerce/checkout.css
@@ -7,7 +7,7 @@ p :is(input,textarea){width:100%;}
 #customer_details .col-1 .woocommerce-billing-fields__field-wrapper{display:grid; gap:2rem;}
 #customer_details .col-2 h3{font-size:24px; margin-bottom:3rem;margin-top:36px;}
 #order_comments_field label{color:var(--wp--preset--color--title);}
-abbr[title]{color:red; text-decoration:none;}
+abbr[title]{color:var(--wp--preset--color--attenuated); text-decoration:none;}
 #order_review_heading{font-size:24px;}
 .shop_table.woocommerce-checkout-review-order-table{width:100%;margin:27px 0 21px;border-collapse:collapse;font-size:15px;color:var(--wp--preset--color--title);}
 .shop_table.woocommerce-checkout-review-order-table tr{display:flex;align-items:center;justify-content:space-between;background-color:#fafafa;border:1px solid #e1e1e1;border-bottom:0px solid transparent;}
